--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,45 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <nav class="navbar navbar-inverse bg-inverse">
+
+    <a class="navbar-brand" href="#">Boats List</a>
+    <a class="navbar-brand" href="#">Register</a>
+
+    <form class="form-inline">
+      <input class="form-control" type="text" placeholder="Login">
+      <input class="form-control" type="text" placeholder="PassWord">
+      <button class="btn btn-outline-success" type="submit">Login</button>
+    </form>
+    
+    
+
+  </nav>
+</div>
+
+<div class="container">
+
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Weight</th>
+        <th>Creation Date</th>
+        <th>Owner</th>
+        <th>Management</th>
+      </tr>
+    </thead>
+    <tbody>
+
+      <tr>
+        <td><input class="form-control" type="text" placeholder="Name"></td>
+        <td><input class="form-control" type="text" placeholder="Description"></td>
+        <td><input class="form-control" type="text" placeholder="Weight"></td>
+        <td><input class="form-control" type="text" placeholder="Creation Date"></td>
+        <td>Me</td>
+        <td><button class="btn btn-outline-success" type="submit">Add</button></td>
+      </tr>
+
+
+    </tbody>
+  </table>
+</div>
